--- a/STM_src/NormalMapScanner/NormalMapScanner.ioc
+++ b/STM_src/NormalMapScanner/NormalMapScanner.ioc
@@ -1,17 +1,34 @@
 #MicroXplorer Configuration settings - do not modify
-DCMI.IPParameters=JPEGMode
+DCMI.IPParameters=JPEGMode,PCKPolarity
 DCMI.JPEGMode=DCMI_JPEG_DISABLE
+DCMI.PCKPolarity=DCMI_PCKPOLARITY_RISING
+Dma.DCMI.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.DCMI.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.DCMI.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.DCMI.0.Instance=DMA2_Stream1
+Dma.DCMI.0.MemBurst=DMA_MBURST_SINGLE
+Dma.DCMI.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.DCMI.0.MemInc=DMA_MINC_ENABLE
+Dma.DCMI.0.Mode=DMA_NORMAL
+Dma.DCMI.0.PeriphBurst=DMA_PBURST_SINGLE
+Dma.DCMI.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.DCMI.0.PeriphInc=DMA_PINC_DISABLE
+Dma.DCMI.0.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.DCMI.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.Request0=DCMI
+Dma.RequestsNb=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=DCMI
-Mcu.IP1=I2C2
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI2
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
-Mcu.IPNb=7
+Mcu.IP1=DMA
+Mcu.IP2=I2C2
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI2
+Mcu.IP6=SYS
+Mcu.IP7=TIM2
+Mcu.IPNb=8
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -55,6 +72,8 @@ Mcu.UserName=STM32F446RETx
 MxCube.Version=6.4.0
 MxDb.Version=DB.6.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.DCMI_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -187,57 +206,55 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DCMI_Init-DCMI-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DCMI_Init-DCMI-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_DMA_Init-DMA-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
-RCC.AHBFreq_Value=100000000
+RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=25000000
-RCC.APB1TimFreq_Value=50000000
+RCC.APB1Freq_Value=45000000
+RCC.APB1TimFreq_Value=90000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=50000000
-RCC.APB2TimFreq_Value=100000000
+RCC.APB2Freq_Value=90000000
+RCC.APB2TimFreq_Value=180000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=100000000
+RCC.CortexFreq_Value=180000000
 RCC.EthernetFreq_Value=84000000
-RCC.FCLKCortexFreq_Value=100000000
-RCC.FLatency-AdvancedSettings=FLASH_LATENCY_3
-RCC.FMPI2C1Freq_Value=25000000
+RCC.FCLKCortexFreq_Value=180000000
+RCC.FLatency-AdvancedSettings=FLASH_LATENCY_5
+RCC.FMPI2C1Freq_Value=45000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=100000000
+RCC.HCLKFreq_Value=180000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=96000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PWRFreq_Value,RCC_MCO1Source,RCC_MCODiv1,RTCFreq_Value,RTCHSEDivFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=25000000
-RCC.MCO2PinFreq_Value=100000000
-RCC.PLLCLKFreq_Value=100000000
+RCC.MCO1PinFreq_Value=16000000
+RCC.MCO2PinFreq_Value=180000000
+RCC.PLLCLKFreq_Value=180000000
 RCC.PLLI2SPCLKFreq_Value=96000000
 RCC.PLLI2SQCLKFreq_Value=96000000
 RCC.PLLI2SRCLKFreq_Value=96000000
 RCC.PLLM=8
-RCC.PLLN=100
-RCC.PLLQCLKFreq_Value=100000000
-RCC.PLLRCLKFreq_Value=100000000
+RCC.PLLN=180
+RCC.PLLQCLKFreq_Value=180000000
+RCC.PLLRCLKFreq_Value=180000000
 RCC.PLLSAIPCLKFreq_Value=96000000
 RCC.PLLSAIQCLKFreq_Value=96000000
-RCC.PWRFreq_Value=100000000
-RCC.RCC_MCO1Source=RCC_MCO1SOURCE_PLLCLK
-RCC.RCC_MCODiv1=RCC_MCODIV_4
+RCC.PWRFreq_Value=180000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SAIAFreq_Value=96000000
 RCC.SAIBFreq_Value=96000000
-RCC.SDIOFreq_Value=100000000
-RCC.SPDIFRXFreq_Value=100000000
-RCC.SYSCLKFreq_VALUE=100000000
+RCC.SDIOFreq_Value=180000000
+RCC.SPDIFRXFreq_Value=180000000
+RCC.SYSCLKFreq_VALUE=180000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.USBFreq_Value=100000000
+RCC.USBFreq_Value=180000000
 RCC.VCOI2SInputFreq_Value=1000000
 RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=1000000
-RCC.VCOOutputFreq_Value=200000000
+RCC.VCOOutputFreq_Value=360000000
 RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
@@ -245,7 +262,7 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
 SH.S_TIM2_CH2.ConfNb=1
-SPI2.CalculateBaudRate=12.5 MBits/s
+SPI2.CalculateBaudRate=22.5 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
