--- a/STM_src/NormalMapScanner/NormalMapScanner.ioc
+++ b/STM_src/NormalMapScanner/NormalMapScanner.ioc
@@ -1,94 +1,112 @@
 #MicroXplorer Configuration settings - do not modify
-DCMI.IPParameters=JPEGMode,PCKPolarity
+DCMI.IPParameters=JPEGMode
 DCMI.JPEGMode=DCMI_JPEG_DISABLE
-DCMI.PCKPolarity=DCMI_PCKPOLARITY_RISING
-Dma.DCMI.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.DCMI.0.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.DCMI.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.DCMI.0.Instance=DMA2_Stream1
-Dma.DCMI.0.MemBurst=DMA_MBURST_SINGLE
-Dma.DCMI.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.DCMI.0.MemInc=DMA_MINC_ENABLE
-Dma.DCMI.0.Mode=DMA_NORMAL
-Dma.DCMI.0.PeriphBurst=DMA_PBURST_SINGLE
-Dma.DCMI.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.DCMI.0.PeriphInc=DMA_PINC_DISABLE
-Dma.DCMI.0.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.DCMI.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.Request0=DCMI
-Dma.RequestsNb=1
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
+I2C2.IPParameters=Timing
+I2C2.Timing=0x20303E5D
 KeepUserPlacement=false
-Mcu.Family=STM32F4
-Mcu.IP0=DCMI
-Mcu.IP1=DMA
+Mcu.CPN=STM32F767ZIT6
+Mcu.Family=STM32F7
+Mcu.IP0=CORTEX_M7
+Mcu.IP1=DCMI
 Mcu.IP2=I2C2
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SPI2
 Mcu.IP6=SYS
-Mcu.IP7=TIM2
-Mcu.IPNb=8
-Mcu.Name=STM32F446R(C-E)Tx
-Mcu.Package=LQFP64
-Mcu.Pin0=PC13
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA6
-Mcu.Pin11=PB1
-Mcu.Pin12=PB10
-Mcu.Pin13=PB13
-Mcu.Pin14=PB14
-Mcu.Pin15=PB15
-Mcu.Pin16=PC6
-Mcu.Pin17=PC7
-Mcu.Pin18=PC8
-Mcu.Pin19=PC9
-Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA8
-Mcu.Pin21=PA10
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PC11
-Mcu.Pin25=PC12
-Mcu.Pin26=PB3
-Mcu.Pin27=PB4
-Mcu.Pin28=PB5
-Mcu.Pin29=PB6
-Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PB7
-Mcu.Pin31=PB8
-Mcu.Pin32=PB9
-Mcu.Pin33=VP_SYS_VS_Systick
-Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PC1
-Mcu.Pin6=PC2
-Mcu.Pin7=PA1
-Mcu.Pin8=PA4
-Mcu.Pin9=PA5
-Mcu.PinsNb=34
+Mcu.IP7=TIM1
+Mcu.IP8=USART3
+Mcu.IPNb=9
+Mcu.Name=STM32F767ZITx
+Mcu.Package=LQFP144
+Mcu.Pin0=PE4
+Mcu.Pin1=PE5
+Mcu.Pin10=PH1/OSC_OUT
+Mcu.Pin11=PC1
+Mcu.Pin12=PC2
+Mcu.Pin13=PC3
+Mcu.Pin14=PA1
+Mcu.Pin15=PA2
+Mcu.Pin16=PA6
+Mcu.Pin17=PA7
+Mcu.Pin18=PC4
+Mcu.Pin19=PC5
+Mcu.Pin2=PE6
+Mcu.Pin20=PB0
+Mcu.Pin21=PB2
+Mcu.Pin22=PF14
+Mcu.Pin23=PF15
+Mcu.Pin24=PE7
+Mcu.Pin25=PE8
+Mcu.Pin26=PE11
+Mcu.Pin27=PB10
+Mcu.Pin28=PB13
+Mcu.Pin29=PB14
+Mcu.Pin3=PC13
+Mcu.Pin30=PD8
+Mcu.Pin31=PD9
+Mcu.Pin32=PD13
+Mcu.Pin33=PG6
+Mcu.Pin34=PG7
+Mcu.Pin35=PC6
+Mcu.Pin36=PC7
+Mcu.Pin37=PC8
+Mcu.Pin38=PC9
+Mcu.Pin39=PA8
+Mcu.Pin4=PC14/OSC32_IN
+Mcu.Pin40=PA9
+Mcu.Pin41=PA10
+Mcu.Pin42=PA11
+Mcu.Pin43=PA12
+Mcu.Pin44=PA13
+Mcu.Pin45=PA14
+Mcu.Pin46=PD3
+Mcu.Pin47=PG9
+Mcu.Pin48=PG11
+Mcu.Pin49=PG13
+Mcu.Pin5=PC15/OSC32_OUT
+Mcu.Pin50=PB3
+Mcu.Pin51=PB7
+Mcu.Pin52=VP_SYS_VS_Systick
+Mcu.Pin6=PF0
+Mcu.Pin7=PF1
+Mcu.Pin8=PF4
+Mcu.Pin9=PH0/OSC_IN
+Mcu.PinsNb=53
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
-Mcu.UserName=STM32F446RETx
-MxCube.Version=6.4.0
-MxDb.Version=DB.6.0.40
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.DCMI_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+Mcu.UserName=STM32F767ZITx
+MxCube.Version=6.5.0
+MxDb.Version=DB.6.0.50
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-PA1.Signal=S_TIM2_CH2
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.I2C2_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
+PA1.Locked=true
+PA1.Signal=ETH_REF_CLK
 PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=SD_CS
+PA10.GPIO_Label=USB_ID
 PA10.Locked=true
-PA10.Signal=GPIO_Output
+PA10.Signal=USB_OTG_FS_ID
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=USB_DM
+PA11.Locked=true
+PA11.Signal=USB_OTG_FS_DM
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=USB_DP
+PA12.Locked=true
+PA12.Signal=USB_OTG_FS_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -99,71 +117,76 @@ PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA4.Locked=true
-PA4.Signal=DCMI_HSYNC
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=LD2 [Green Led]
-PA5.Locked=true
-PA5.Signal=GPIO_Output
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
+PA2.Locked=true
+PA2.Signal=ETH_MDIO
 PA6.Mode=Slave_8_bits_Embedded_Synchro
 PA6.Signal=DCMI_PIXCLK
-PA8.Mode=Clock-out-1
-PA8.Signal=RCC_MCO_1
-PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=LCD_CS
-PB1.Locked=true
-PB1.Signal=GPIO_Output
-PB10.Mode=I2C
-PB10.Signal=I2C2_SCL
-PB13.Mode=Full_Duplex_Master
-PB13.Signal=SPI2_SCK
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
+PA7.Locked=true
+PA7.Signal=ETH_CRS_DV
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=USB_SOF [TP1]
+PA8.Locked=true
+PA8.Signal=USB_OTG_FS_SOF
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=USB_VBUS
+PA9.Locked=true
+PA9.Signal=USB_OTG_FS_VBUS
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=LD1 [Green]
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB10.Mode=Full_Duplex_Master
+PB10.Signal=SPI2_SCK
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
+PB13.Locked=true
+PB13.Signal=ETH_TXD1
 PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=LCD_DC
+PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
-PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=LCD_RST
-PB15.Locked=true
-PB15.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=TP_BUSY
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=TP_BUSY
+PB3.GPIO_Label=SWO
 PB3.Locked=true
-PB3.Signal=GPIO_Output
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=TP_IRQ
-PB4.Locked=true
-PB4.Signal=GPIO_Input
-PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=TP_CS
-PB5.Locked=true
-PB5.Signal=GPIO_Output
-PB6.Mode=Slave_8_bits_Embedded_Synchro
-PB6.Signal=DCMI_D5
+PB3.Signal=SYS_JTDO-SWO
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
-PB7.Signal=DCMI_VSYNC
-PB8.Mode=Slave_8_bits_Embedded_Synchro
-PB8.Signal=DCMI_D6
-PB9.Mode=Slave_8_bits_Embedded_Synchro
-PB9.Signal=DCMI_D7
-PC1.Mode=Full_Duplex_Master
-PC1.Signal=SPI2_MOSI
-PC11.Mode=Slave_8_bits_Embedded_Synchro
-PC11.Signal=DCMI_D4
-PC12.Mode=I2C
-PC12.Signal=I2C2_SDA
-PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PC13.GPIO_Label=B1 [Blue PushButton]
-PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB7.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
+PC1.Locked=true
+PC1.Signal=ETH_MDC
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=USER_Btn [B1]
 PC13.Locked=true
 PC13.Signal=GPXTI13
-PC14-OSC32_IN.Locked=true
-PC14-OSC32_IN.Mode=LSE-External-Oscillator
-PC14-OSC32_IN.Signal=RCC_OSC32_IN
-PC15-OSC32_OUT.Locked=true
-PC15-OSC32_OUT.Mode=LSE-External-Oscillator
-PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC14/OSC32_IN.Locked=true
+PC14/OSC32_IN.Mode=LSE-External-Oscillator
+PC14/OSC32_IN.Signal=RCC_OSC32_IN
+PC15/OSC32_OUT.Locked=true
+PC15/OSC32_OUT.Mode=LSE-External-Oscillator
+PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
 PC2.Mode=Full_Duplex_Master
 PC2.Signal=SPI2_MISO
+PC3.Mode=Full_Duplex_Master
+PC3.Signal=SPI2_MOSI
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=RMII_RXD0 [LAN8742A-CZ-TR_RXD0]
+PC4.Locked=true
+PC4.Signal=ETH_RXD0
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
+PC5.Locked=true
+PC5.Signal=ETH_RXD1
 PC6.Mode=Slave_8_bits_Embedded_Synchro
 PC6.Signal=DCMI_D0
 PC7.Mode=Slave_8_bits_Embedded_Synchro
@@ -172,12 +195,79 @@ PC8.Mode=Slave_8_bits_Embedded_Synchro
 PC8.Signal=DCMI_D2
 PC9.Mode=Slave_8_bits_Embedded_Synchro
 PC9.Signal=DCMI_D3
-PH0-OSC_IN.Locked=true
-PH0-OSC_IN.Mode=HSE-External-Oscillator
-PH0-OSC_IN.Signal=RCC_OSC_IN
-PH1-OSC_OUT.Locked=true
-PH1-OSC_OUT.Mode=HSE-External-Oscillator
-PH1-OSC_OUT.Signal=RCC_OSC_OUT
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=SD_CS
+PD13.Locked=true
+PD13.Signal=GPIO_Output
+PD3.Mode=Slave_8_bits_Embedded_Synchro
+PD3.Signal=DCMI_D5
+PD8.GPIOParameters=GPIO_Label
+PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
+PD8.Locked=true
+PD8.Mode=Asynchronous
+PD8.Signal=USART3_TX
+PD9.GPIOParameters=GPIO_Label
+PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
+PD9.Locked=true
+PD9.Mode=Asynchronous
+PD9.Signal=USART3_RX
+PE11.Signal=S_TIM1_CH2
+PE4.Mode=Slave_8_bits_Embedded_Synchro
+PE4.Signal=DCMI_D4
+PE5.Mode=Slave_8_bits_Embedded_Synchro
+PE5.Signal=DCMI_D6
+PE6.Mode=Slave_8_bits_Embedded_Synchro
+PE6.Signal=DCMI_D7
+PE7.GPIOParameters=GPIO_Label
+PE7.GPIO_Label=TP_IRQ
+PE7.Locked=true
+PE7.Signal=GPIO_Input
+PE8.GPIOParameters=GPIO_Label
+PE8.GPIO_Label=TP_CS
+PE8.Locked=true
+PE8.Signal=GPIO_Output
+PF0.Mode=I2C
+PF0.Signal=I2C2_SDA
+PF1.Mode=I2C
+PF1.Signal=I2C2_SCL
+PF14.GPIOParameters=GPIO_Label
+PF14.GPIO_Label=LCD_CS
+PF14.Locked=true
+PF14.Signal=GPIO_Output
+PF15.GPIOParameters=GPIO_Label
+PF15.GPIO_Label=LCD_RST
+PF15.Locked=true
+PF15.Signal=GPIO_Output
+PF4.GPIOParameters=GPIO_Label
+PF4.GPIO_Label=LCD_DC
+PF4.Locked=true
+PF4.Signal=GPIO_Output
+PG11.GPIOParameters=GPIO_Label
+PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
+PG11.Locked=true
+PG11.Signal=ETH_TX_EN
+PG13.GPIOParameters=GPIO_Label
+PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
+PG13.Locked=true
+PG13.Signal=ETH_TXD0
+PG6.GPIOParameters=GPIO_Label
+PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
+PG6.Locked=true
+PG6.Signal=GPIO_Output
+PG7.GPIOParameters=GPIO_Label
+PG7.GPIO_Label=USB_OverCurrent [STMPS2151STR_FAULT]
+PG7.Locked=true
+PG7.Signal=GPIO_Input
+PG9.Locked=true
+PG9.Signal=DCMI_VSYNC
+PH0/OSC_IN.GPIOParameters=GPIO_Label
+PH0/OSC_IN.GPIO_Label=MCO [STM32F103CBT6_PA8]
+PH0/OSC_IN.Locked=true
+PH0/OSC_IN.Mode=HSE-External-Clock-Source
+PH0/OSC_IN.Signal=RCC_OSC_IN
+PH1/OSC_OUT.Locked=true
+PH1/OSC_OUT.Mode=HSE-External-Clock-Source
+PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -187,8 +277,8 @@ ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32F446RETx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.2
+ProjectManager.DeviceId=STM32F767ZITx
+ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.16.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -206,74 +296,113 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DCMI_Init-DCMI-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_DMA_Init-DMA-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true
-RCC.48MHZClocksFreq_Value=84000000
-RCC.AHBFreq_Value=180000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=45000000
-RCC.APB1TimFreq_Value=90000000
-RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=90000000
-RCC.APB2TimFreq_Value=180000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DCMI_Init-DCMI-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+RCC.48MHZClocksFreq_Value=24000000
+RCC.ADC12outputFreq_Value=72000000
+RCC.ADC34outputFreq_Value=72000000
+RCC.AHBFreq_Value=96000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=48000000
+RCC.APB1TimFreq_Value=96000000
+RCC.APB2Freq_Value=96000000
+RCC.APB2TimFreq_Value=96000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=180000000
-RCC.EthernetFreq_Value=84000000
-RCC.FCLKCortexFreq_Value=180000000
-RCC.FLatency-AdvancedSettings=FLASH_LATENCY_5
-RCC.FMPI2C1Freq_Value=45000000
+RCC.CortexFreq_Value=96000000
+RCC.DFSDMAudioFreq_Value=192000000
+RCC.DFSDMFreq_Value=96000000
+RCC.EthernetFreq_Value=96000000
+RCC.FCLKCortexFreq_Value=96000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=180000000
+RCC.HCLKFreq_Value=96000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=96000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PWRFreq_Value,RCC_MCODiv1,RTCFreq_Value,RTCHSEDivFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S
+RCC.I2C1Freq_Value=48000000
+RCC.I2C2Freq_Value=48000000
+RCC.I2C3Freq_Value=48000000
+RCC.I2C4Freq_Value=48000000
+RCC.I2SClocksFreq_Value=48000000
+RCC.I2SFreq_Value=192000000
+RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SClocksFreq_Value,I2SFreq_Value,LCDTFTFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PRESCALERUSB,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S,WatchDogFreq_Value
+RCC.LCDTFTFreq_Value=96000000
+RCC.LCDTFToutputFreq_Value=96000000
+RCC.LPTIM1Freq_Value=48000000
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=8000000
-RCC.MCO2PinFreq_Value=180000000
-RCC.PLLCLKFreq_Value=180000000
-RCC.PLLI2SPCLKFreq_Value=96000000
-RCC.PLLI2SQCLKFreq_Value=96000000
-RCC.PLLI2SRCLKFreq_Value=96000000
-RCC.PLLM=8
-RCC.PLLN=180
-RCC.PLLQCLKFreq_Value=180000000
-RCC.PLLRCLKFreq_Value=180000000
-RCC.PLLSAIPCLKFreq_Value=96000000
-RCC.PLLSAIQCLKFreq_Value=96000000
-RCC.PWRFreq_Value=180000000
-RCC.RCC_MCODiv1=RCC_MCODIV_2
+RCC.MCO1PinFreq_Value=16000000
+RCC.MCO2PinFreq_Value=96000000
+RCC.MCOFreq_Value=72000000
+RCC.PLLCLKFreq_Value=96000000
+RCC.PLLI2SPCLKFreq_Value=192000000
+RCC.PLLI2SQCLKFreq_Value=192000000
+RCC.PLLI2SRCLKFreq_Value=192000000
+RCC.PLLI2SRoutputFreq_Value=192000000
+RCC.PLLM=4
+RCC.PLLMCOFreq_Value=72000000
+RCC.PLLMUL=RCC_PLL_MUL9
+RCC.PLLN=96
+RCC.PLLQ=4
+RCC.PLLQCLKFreq_Value=48000000
+RCC.PLLQoutputFreq_Value=48000000
+RCC.PLLRFreq_Value=96000000
+RCC.PLLSAIPCLKFreq_Value=192000000
+RCC.PLLSAIQCLKFreq_Value=192000000
+RCC.PLLSAIRCLKFreq_Value=192000000
+RCC.PLLSAIoutputFreq_Value=192000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.PRESCALERUSB=RCC_USBCLKSOURCE_PLL_DIV1_5
+RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SAIAFreq_Value=96000000
-RCC.SAIBFreq_Value=96000000
-RCC.SDIOFreq_Value=180000000
-RCC.SPDIFRXFreq_Value=180000000
-RCC.SYSCLKFreq_VALUE=180000000
+RCC.SAI1Freq_Value=192000000
+RCC.SAI2Freq_Value=192000000
+RCC.SDMMC2Freq_Value=96000000
+RCC.SDMMCFreq_Value=96000000
+RCC.SPDIFRXFreq_Value=192000000
+RCC.SYSCLKFreq_VALUE=96000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.USBFreq_Value=180000000
-RCC.VCOI2SInputFreq_Value=1000000
-RCC.VCOI2SOutputFreq_Value=192000000
+RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TIM15Freq_Value=72000000
+RCC.TIM16Freq_Value=72000000
+RCC.TIM17Freq_Value=72000000
+RCC.TIM1Freq_Value=72000000
+RCC.TIM20Freq_Value=72000000
+RCC.TIM2Freq_Value=72000000
+RCC.TIM3Freq_Value=72000000
+RCC.TIM8Freq_Value=72000000
+RCC.UART4Freq_Value=48000000
+RCC.UART5Freq_Value=48000000
+RCC.UART7Freq_Value=48000000
+RCC.UART8Freq_Value=48000000
+RCC.USART1Freq_Value=96000000
+RCC.USART2Freq_Value=48000000
+RCC.USART3Freq_Value=48000000
+RCC.USART6Freq_Value=96000000
+RCC.USBFreq_Value=48000000
+RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
-RCC.VCOInputMFreq_Value=1000000
-RCC.VCOOutputFreq_Value=360000000
-RCC.VCOSAIInputFreq_Value=1000000
-RCC.VCOSAIOutputFreq_Value=192000000
-RCC.VcooutputI2S=96000000
+RCC.VCOOutput2Freq_Value=8000000
+RCC.VCOOutputFreq_Value=192000000
+RCC.VCOSAIOutputFreq_Value=384000000
+RCC.VcooutputI2S=48000000
+RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
-SH.S_TIM2_CH2.ConfNb=1
-SPI2.CalculateBaudRate=22.5 MBits/s
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
+SPI2.CalculateBaudRate=24.0 MBits/s
+SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,NSSPMode
 SPI2.Mode=SPI_MODE_MASTER
+SPI2.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI2.VirtualType=VM_MASTER
-TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM2.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period
-TIM2.Period=1000-1
-TIM2.Prescaler=1000-1
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period
+TIM1.Period=1000-1
+TIM1.Prescaler=1000-1
+USART3.IPParameters=VirtualMode-Asynchronous
+USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-board=NUCLEO-F446RE
+board=NUCLEO-F767ZI
 boardIOC=true
 isbadioc=false
