Pinout and perypherial configuration for NUCLEO-F767ZI

--- a/STM_src/NormalMapScanner/NormalMapScanner.ioc
+++ b/STM_src/NormalMapScanner/NormalMapScanner.ioc
@@ -1,89 +1,97 @@
 #MicroXplorer Configuration settings - do not modify
-DCMI.IPParameters=JPEGMode
-DCMI.JPEGMode=DCMI_JPEG_DISABLE
+DCMI.IPParameters=JPEGMode,PCKPolarity
+DCMI.JPEGMode=DCMI_JPEG_ENABLE
+DCMI.PCKPolarity=DCMI_PCKPOLARITY_RISING
+Dma.DCMI.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.DCMI.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.DCMI.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.DCMI.0.Instance=DMA2_Stream1
+Dma.DCMI.0.MemBurst=DMA_MBURST_SINGLE
+Dma.DCMI.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.DCMI.0.MemInc=DMA_MINC_ENABLE
+Dma.DCMI.0.Mode=DMA_CIRCULAR
+Dma.DCMI.0.PeriphBurst=DMA_PBURST_SINGLE
+Dma.DCMI.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.DCMI.0.PeriphInc=DMA_PINC_DISABLE
+Dma.DCMI.0.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.DCMI.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.Request0=DCMI
+Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C2.IPParameters=Timing
-I2C2.Timing=0x20404768
+I2C1.IPParameters=Timing
+I2C1.Timing=0x20404768
 KeepUserPlacement=false
 Mcu.CPN=STM32F767ZIT6
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DCMI
-Mcu.IP2=I2C2
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI2
-Mcu.IP6=SYS
-Mcu.IP7=TIM1
-Mcu.IP8=USART3
-Mcu.IPNb=9
+Mcu.IP2=DMA
+Mcu.IP3=I2C1
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI2
+Mcu.IP7=SYS
+Mcu.IP8=TIM1
+Mcu.IP9=USART3
+Mcu.IPNb=10
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE4
 Mcu.Pin1=PE5
-Mcu.Pin10=PH1/OSC_OUT
-Mcu.Pin11=PC1
-Mcu.Pin12=PC2
-Mcu.Pin13=PC3
-Mcu.Pin14=PA1
-Mcu.Pin15=PA2
-Mcu.Pin16=PA6
-Mcu.Pin17=PA7
-Mcu.Pin18=PC4
-Mcu.Pin19=PC5
+Mcu.Pin10=PC3
+Mcu.Pin11=PA4
+Mcu.Pin12=PA6
+Mcu.Pin13=PB0
+Mcu.Pin14=PB2
+Mcu.Pin15=PF14
+Mcu.Pin16=PF15
+Mcu.Pin17=PG0
+Mcu.Pin18=PG1
+Mcu.Pin19=PE7
 Mcu.Pin2=PE6
-Mcu.Pin20=PB0
-Mcu.Pin21=PB2
-Mcu.Pin22=PF14
-Mcu.Pin23=PF15
-Mcu.Pin24=PE7
-Mcu.Pin25=PE8
-Mcu.Pin26=PE11
-Mcu.Pin27=PB10
-Mcu.Pin28=PB13
-Mcu.Pin29=PB14
+Mcu.Pin20=PE8
+Mcu.Pin21=PE11
+Mcu.Pin22=PB10
+Mcu.Pin23=PB14
+Mcu.Pin24=PD8
+Mcu.Pin25=PD9
+Mcu.Pin26=PD13
+Mcu.Pin27=PG6
+Mcu.Pin28=PG7
+Mcu.Pin29=PC6
 Mcu.Pin3=PC13
-Mcu.Pin30=PD8
-Mcu.Pin31=PD9
-Mcu.Pin32=PD13
-Mcu.Pin33=PG6
-Mcu.Pin34=PG7
-Mcu.Pin35=PC6
-Mcu.Pin36=PC7
-Mcu.Pin37=PC8
-Mcu.Pin38=PC9
-Mcu.Pin39=PA8
+Mcu.Pin30=PC7
+Mcu.Pin31=PC8
+Mcu.Pin32=PC9
+Mcu.Pin33=PA8
+Mcu.Pin34=PA13
+Mcu.Pin35=PA14
+Mcu.Pin36=PD3
+Mcu.Pin37=PG9
+Mcu.Pin38=PB3
+Mcu.Pin39=PB7
 Mcu.Pin4=PC14/OSC32_IN
-Mcu.Pin40=PA9
-Mcu.Pin41=PA10
-Mcu.Pin42=PA11
-Mcu.Pin43=PA12
-Mcu.Pin44=PA13
-Mcu.Pin45=PA14
-Mcu.Pin46=PD3
-Mcu.Pin47=PG9
-Mcu.Pin48=PG11
-Mcu.Pin49=PG13
+Mcu.Pin40=PB8
+Mcu.Pin41=PB9
+Mcu.Pin42=VP_SYS_VS_Systick
 Mcu.Pin5=PC15/OSC32_OUT
-Mcu.Pin50=PB3
-Mcu.Pin51=PB7
-Mcu.Pin52=VP_SYS_VS_Systick
-Mcu.Pin6=PF0
-Mcu.Pin7=PF1
-Mcu.Pin8=PF4
-Mcu.Pin9=PH0/OSC_IN
-Mcu.PinsNb=53
+Mcu.Pin6=PF4
+Mcu.Pin7=PH0/OSC_IN
+Mcu.Pin8=PH1/OSC_OUT
+Mcu.Pin9=PC2
+Mcu.PinsNb=43
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
 MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.DCMI_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
-NVIC.I2C2_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
@@ -91,22 +99,6 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
-PA1.Locked=true
-PA1.Signal=ETH_REF_CLK
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=USB_ID
-PA10.Locked=true
-PA10.Signal=USB_OTG_FS_ID
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=USB_DM
-PA11.Locked=true
-PA11.Signal=USB_OTG_FS_DM
-PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=USB_DP
-PA12.Locked=true
-PA12.Signal=USB_OTG_FS_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -117,34 +109,20 @@ PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
-PA2.Locked=true
-PA2.Signal=ETH_MDIO
-PA6.Mode=Slave_8_bits_Embedded_Synchro
+PA4.Mode=Slave_8_bits_External_Synchro
+PA4.Signal=DCMI_HSYNC
+PA6.Mode=Slave_8_bits_External_Synchro
 PA6.Signal=DCMI_PIXCLK
-PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
-PA7.Locked=true
-PA7.Signal=ETH_CRS_DV
 PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=USB_SOF [TP1]
-PA8.Locked=true
-PA8.Signal=USB_OTG_FS_SOF
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=USB_VBUS
-PA9.Locked=true
-PA9.Signal=USB_OTG_FS_VBUS
+PA8.GPIO_Label=DCMI_XCLK
+PA8.Mode=Clock-out-1
+PA8.Signal=RCC_MCO_1
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
-PB13.GPIOParameters=GPIO_Label
-PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
-PB13.Locked=true
-PB13.Signal=ETH_TXD1
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
@@ -161,10 +139,14 @@ PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
 PB7.Signal=GPIO_Output
-PC1.GPIOParameters=GPIO_Label
-PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
-PC1.Locked=true
-PC1.Signal=ETH_MDC
+PB8.GPIOParameters=GPIO_Pu
+PB8.GPIO_Pu=GPIO_PULLUP
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.GPIOParameters=GPIO_Pu
+PB9.GPIO_Pu=GPIO_PULLUP
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=USER_Btn [B1]
 PC13.Locked=true
@@ -179,27 +161,21 @@ PC2.Mode=Full_Duplex_Master
 PC2.Signal=SPI2_MISO
 PC3.Mode=Full_Duplex_Master
 PC3.Signal=SPI2_MOSI
-PC4.GPIOParameters=GPIO_Label
-PC4.GPIO_Label=RMII_RXD0 [LAN8742A-CZ-TR_RXD0]
-PC4.Locked=true
-PC4.Signal=ETH_RXD0
-PC5.GPIOParameters=GPIO_Label
-PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
-PC5.Locked=true
-PC5.Signal=ETH_RXD1
-PC6.Mode=Slave_8_bits_Embedded_Synchro
+PC6.Mode=Slave_8_bits_External_Synchro
 PC6.Signal=DCMI_D0
-PC7.Mode=Slave_8_bits_Embedded_Synchro
+PC7.Mode=Slave_8_bits_External_Synchro
 PC7.Signal=DCMI_D1
-PC8.Mode=Slave_8_bits_Embedded_Synchro
+PC8.Mode=Slave_8_bits_External_Synchro
 PC8.Signal=DCMI_D2
-PC9.Mode=Slave_8_bits_Embedded_Synchro
+PC9.Locked=true
+PC9.Mode=Slave_8_bits_External_Synchro
 PC9.Signal=DCMI_D3
 PD13.GPIOParameters=GPIO_Label
 PD13.GPIO_Label=SD_CS
 PD13.Locked=true
 PD13.Signal=GPIO_Output
-PD3.Mode=Slave_8_bits_Embedded_Synchro
+PD3.Locked=true
+PD3.Mode=Slave_8_bits_External_Synchro
 PD3.Signal=DCMI_D5
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
@@ -212,11 +188,11 @@ PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
 PE11.Signal=S_TIM1_CH2
-PE4.Mode=Slave_8_bits_Embedded_Synchro
+PE4.Mode=Slave_8_bits_External_Synchro
 PE4.Signal=DCMI_D4
-PE5.Mode=Slave_8_bits_Embedded_Synchro
+PE5.Mode=Slave_8_bits_External_Synchro
 PE5.Signal=DCMI_D6
-PE6.Mode=Slave_8_bits_Embedded_Synchro
+PE6.Mode=Slave_8_bits_External_Synchro
 PE6.Signal=DCMI_D7
 PE7.GPIOParameters=GPIO_Label
 PE7.GPIO_Label=TP_IRQ
@@ -226,10 +202,6 @@ PE8.GPIOParameters=GPIO_Label
 PE8.GPIO_Label=TP_CS
 PE8.Locked=true
 PE8.Signal=GPIO_Output
-PF0.Mode=I2C
-PF0.Signal=I2C2_SDA
-PF1.Mode=I2C
-PF1.Signal=I2C2_SCL
 PF14.GPIOParameters=GPIO_Label
 PF14.GPIO_Label=LCD_CS
 PF14.Locked=true
@@ -242,14 +214,14 @@ PF4.GPIOParameters=GPIO_Label
 PF4.GPIO_Label=LCD_DC
 PF4.Locked=true
 PF4.Signal=GPIO_Output
-PG11.GPIOParameters=GPIO_Label
-PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
-PG11.Locked=true
-PG11.Signal=ETH_TX_EN
-PG13.GPIOParameters=GPIO_Label
-PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
-PG13.Locked=true
-PG13.Signal=ETH_TXD0
+PG0.GPIOParameters=GPIO_Label
+PG0.GPIO_Label=CAMERA_RESET
+PG0.Locked=true
+PG0.Signal=GPIO_Input
+PG1.GPIOParameters=GPIO_Label
+PG1.GPIO_Label=CAMERA_PWDN
+PG1.Locked=true
+PG1.Signal=GPIO_Output
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
 PG6.Locked=true
@@ -259,6 +231,7 @@ PG7.GPIO_Label=USB_OverCurrent [STMPS2151STR_FAULT]
 PG7.Locked=true
 PG7.Signal=GPIO_Input
 PG9.Locked=true
+PG9.Mode=Slave_8_bits_External_Synchro
 PG9.Signal=DCMI_VSYNC
 PH0/OSC_IN.GPIOParameters=GPIO_Label
 PH0/OSC_IN.GPIO_Label=MCO [STM32F103CBT6_PA8]
@@ -296,7 +269,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DCMI_Init-DCMI-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DCMI_Init-DCMI-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_DMA_Init-DMA-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -318,24 +291,27 @@ RCC.HCLKFreq_Value=216000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=54000000
+RCC.I2C2Enable-ClockTree=true
 RCC.I2C2Freq_Value=54000000
 RCC.I2C3Freq_Value=54000000
 RCC.I2C4Freq_Value=54000000
 RCC.I2SClocksFreq_Value=48000000
-RCC.I2SFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SClocksFreq_Value,I2SFreq_Value,LCDTFTFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PRESCALERUSB,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S,WatchDogFreq_Value
+RCC.I2SFreq_Value=96000000
+RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Enable-ClockTree,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SClocksFreq_Value,I2SFreq_Value,LCDTFTFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,OscillatorTypeHSE-ClockTree,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SR,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PRESCALERUSB,RCC_MCO2Source,RCC_MCODiv2,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S,WatchDogFreq_Value
 RCC.LCDTFTFreq_Value=96000000
 RCC.LCDTFToutputFreq_Value=96000000
 RCC.LPTIM1Freq_Value=54000000
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
-RCC.MCO2PinFreq_Value=216000000
+RCC.MCO2PinFreq_Value=32000000
 RCC.MCOFreq_Value=72000000
+RCC.OscillatorTypeHSE-ClockTree=
 RCC.PLLCLKFreq_Value=216000000
 RCC.PLLI2SPCLKFreq_Value=192000000
 RCC.PLLI2SQCLKFreq_Value=192000000
-RCC.PLLI2SRCLKFreq_Value=192000000
-RCC.PLLI2SRoutputFreq_Value=192000000
+RCC.PLLI2SR=4
+RCC.PLLI2SRCLKFreq_Value=96000000
+RCC.PLLI2SRoutputFreq_Value=96000000
 RCC.PLLM=4
 RCC.PLLMCOFreq_Value=72000000
 RCC.PLLMUL=RCC_PLL_MUL9
@@ -350,6 +326,8 @@ RCC.PLLSAIRCLKFreq_Value=192000000
 RCC.PLLSAIoutputFreq_Value=192000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PRESCALERUSB=RCC_USBCLKSOURCE_PLL_DIV1_5
+RCC.RCC_MCO2Source=RCC_MCO2SOURCE_PLLI2SCLK
+RCC.RCC_MCODiv2=RCC_MCODIV_3
 RCC.RNGFreq_Value=108000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
